Update pt-BR l10n for calendar (by Emerson Prado)

--- a/pt-BR/calendar/chrome/calendar/calendar-event-dialog.properties
+++ b/pt-BR/calendar/chrome/calendar/calendar-event-dialog.properties
@@ -38,121 +38,311 @@
 #
 # ***** END LICENSE BLOCK *****
 
-repeatDetailsRuleDaily1=every day
-repeatDetailsRuleDaily2=every other day
-repeatDetailsRuleDaily3=every %1$S days
-repeatDetailsRuleDaily4=every weekday
+# LOCALIZATION NOTE (dailyEveryNth):
+# Edit recurrence window -> Recurrence pattern -> Daily repeat rules
+# #1 - number
+# e.g. "every 4 days"
+dailyEveryNth=todo dia;a cada #1 dias
+repeatDetailsRuleDaily4=a cada dia útil
 
-repeatDetailsRuleWeekly1=every %1$S
-repeatDetailsRuleWeekly2=every other week on %1$S
-repeatDetailsRuleWeekly3=every %1$S weeks on %2$S
-repeatDetailsRuleWeekly4=every week
-repeatDetailsRuleWeekly5=every other week
-repeatDetailsRuleWeekly6=every %1$S weeks
+# LOCALIZATION NOTE (weeklyNthOnNounclass...)
+# Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
+# Translate these strings according to noun class/gender of weekday (%1$S) 
+# set in 'repeadDetailsDay...Nounclass' strings.
+# Nounclass1 <-> Masculine gender; Nounclass2 <-> Feminine gender.
+# Add others strings with suffix 3, 4,... for others noun classes if your
+# language need them. In this case, corresponding strings must be added for
+# others rule strings with 'Nounclass...' suffix and corresponding values 
+# "nounclass..." must be written in 'repeatDetailsDayxNounclass' strings.
+# %1$S - weekday (one or more)
+# #2 - week interval
+# e.g. "every 3 weeks on Tuesday, Wednesday and Thursday
+weeklyNthOnNounclass1=a cada %1$S;a cada #2 semanas no %1$S
+weeklyNthOnNounclass2=a cada %1$S;a cada #2 semanas na %1$S
 
+# LOCALIZATION NOTE (weeklyEveryNth):
+# Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
+# #1 - interval
+# e.g. "every 5 weeks"
+weeklyEveryNth=a cada semana;a cada #1 semanas
+
+# LOCALIZATION NOTE ('repeatDetailsDay...' and 'repeatDetailsDay...Nounclass'):
+# Week days names and week days noun classes (feminine/masculine grammatical
+# gender) for languages that need different localization when weekdays nouns
+# have different noun classes (genders).
+# For every weekday, in 'repeatDetailsDay...Nounclass' strings write:
+#   "nounclass1"     for languages with grammatical genders -> MASCULINE gender;
+#                    for languages with noun classes -> a noun class;
+#                    for languages without noun classes or grammatical gender.
+#
+#   "nounclass2"     for languages with grammatical genders -> FEMININE gender;
+#                    for languages with noun classes -> a different noun class.
+#
+#   "nounclass3", "nounclass4" and so on for languages that need more than two 
+#                    noun classes for weekdays. In this case add corresponding
+#                    rule string with "Nounclass..." suffix and ordinal string
+#                    "repeatOrdinalxNounclass..."
+# Will be used rule strings with "Nounclass..." suffix corresponding to the 
+# following strings if there is a weekday in the rule string.
 repeatDetailsDay1=Sunday
+repeatDetailsDay1Nounclass=nounclass1
 repeatDetailsDay2=Monday
+repeatDetailsDay2Nounclass=nounclass2
 repeatDetailsDay3=Tuesday
+repeatDetailsDay3Nounclass=nounclass2
 repeatDetailsDay4=Wednesday
+repeatDetailsDay4Nounclass=nounclass2
 repeatDetailsDay5=Thursday
+repeatDetailsDay5Nounclass=nounclass2
 repeatDetailsDay6=Friday
+repeatDetailsDay6Nounclass=nounclass2
 repeatDetailsDay7=Saturday
-repeatDetailsAnd=and
+repeatDetailsDay7Nounclass=nounclass1
 
-repeatDetailsRuleMonthly=the %1$S %2$S of every month
-repeatDetailsRuleMonthly2=the %1$S %2$S of every other month
-repeatDetailsRuleMonthly3=the %1$S %2$S of every %3$S month
-repeatDetailsRuleMonthly4=day %1$S of every month
-repeatDetailsRuleMonthly5=day %1$S of every other month
-repeatDetailsRuleMonthly6=day %1$S of every %2$S month
-repeatDetailsRuleMonthly7=the last day of the month
-repeatDetailsRuleMonthly8=the last day of every other month
-repeatDetailsRuleMonthly9=the last day of every %1$S month
+# LOCALIZATION NOTE (repeatDetailsAnd)
+# Used to show a number of weekdays in a list
+# i.e. "Sunday, Monday, Tuesday " + and + " Wednesday"
+repeatDetailsAnd=e
 
-repeatDetailsOrdinal1=first
-repeatDetailsOrdinal2=second
-repeatDetailsOrdinal3=third
-repeatDetailsOrdinal4=fourth
-repeatDetailsOrdinal5=fifth
-repeatDetailsOrdinal-1=last
+# LOCALIZATION NOTE (monthlyNthOfEveryNounclass...):
+# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# Translate these strings according to noun class/gender of weekday (%2$S) 
+# set in 'repeadDetailsDay...Nounclass' strings.
+# Nounclass1 <-> Masculine gender; Nounclass2 <-> Feminine gender.
+# Add others strings with suffix 3, 4,... for others noun classes if your
+# language need them. In this case, corresponding strings must be added for
+# others rule strings with 'Nounclass...' suffix and corresponding values 
+# "nounclass..." must be written in 'repeatDetailsDayxNounclass' strings. 
+# %1$S - ordinal with article and noun class/gender corresponding to weekday
+# %2$S - weekday
+# #3 - interval
+# i.e. "the FIRST MONDAY of every 3 months"
+monthlyNthOfEveryNounclass1=%1$S %2$S de cada mês;%1$S %2$S a cada #3 meses
+monthlyNthOfEveryNounclass2=%1$S %2$S de cada mês;%1$S %2$S a cada #3 meses
 
-repeatDetailsRuleYearly1=every %1$S %2$S
-repeatDetailsRuleYearly2=every other year on %1$S %2$S
-repeatDetailsRuleYearly3=every %3$S years on %1$S %2$S
-repeatDetailsRuleYearly4=the %1$S %2$S of %3$S
-repeatDetailsRuleYearly5=every other year the %1$S %2$S of %3$S
-repeatDetailsRuleYearly6=every %4$S years the %1$S %2$S of %3$S
+# LOCALIZATION NOTE (monthlyEveryOfEveryNounclass...):
+# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# Translate these strings according to noun class/gender of weekday (%1$S) 
+# set in 'repeadDetailsDay...Nounclass' strings.
+# Nounclass1 <-> Masculine gender; Nounclass2 <-> Feminine gender.
+# Add others strings with suffix 3, 4,... for others noun classes if your
+# language need them. In this case, corresponding strings must be added for
+# others rule strings with 'Nounclass...' suffix and corresponding values 
+# "nounclass..." must be written in 'repeatDetailsDayxNounclass' strings.
+# %1$S - weekday
+# #2 - interval
+# i.e. "every MONDAY of every 3 months" 
+#  more specific: every monday of January, April, July, October
+monthlyEveryOfEveryNounclass1=todo %1$S de cada mês;todo %1$S a cada #2 meses
+monthlyEveryOfEveryNounclass2=toda %1$S de cada mês;toda %1$S a cada #2 meses
 
-repeatDetailsMonth1=January
-repeatDetailsMonth2=February
-repeatDetailsMonth3=March
-repeatDetailsMonth4=April
-repeatDetailsMonth5=May
-repeatDetailsMonth6=June
-repeatDetailsMonth7=July
-repeatDetailsMonth8=August
-repeatDetailsMonth9=September
-repeatDetailsMonth10=October
-repeatDetailsMonth11=November
-repeatDetailsMonth12=December
+# LOCALIZATION NOTE (monthlyDayOfNth):
+# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# %1$S - day of month
+# #2 - month interval
+# e.g. "day 3 of every 2 months"
+monthlyDayOfNth=dia %1$S de cada mês;dia %1$S a cada #2 meses
 
-repeatDetailsCount=Occurs %1$S\neffective %2$S for %3$S times\nfrom %4$S to %5$S.
-repeatDetailsCountAllDay=Occurs %1$S\neffective %2$S for %3$S times.
-repeatDetailsUntil=Occurs %1$S\neffective %2$S until %3$S\nfrom %4$S to %5$S.
-repeatDetailsUntilAllDay=Occurs %1$S\neffective %2$S until %3$S.
-repeatDetailsInfinite=Occurs %1$S\neffective %2$S\nfrom %3$S to %4$S.
-repeatDetailsInfiniteAllDay=Occurs %1$S\neffective %2$S.
+# LOCALIZATION NOTE (monthlyLastDayOfNth):
+# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# %1$S - day of month
+# #2 - month interval
+# e.g. "the last day of every 3 months"
+monthlyLastDayOfNth=no último dia do mês; no último dia a cada #1 meses
 
-reminderCustomTitle=%1$S %2$S %3$S %4$S
-reminderTitleAtStartEvent=The moment the event starts
-reminderTitleAtStartTask=The moment the task starts
-reminderTitleAtEndEvent=The moment the event ends
-reminderTitleAtEndTask=The moment the task ends
-reminderCustomUnitMinute=minute
-reminderCustomUnitMinutes=minutes
-reminderCustomUnitHour=hour
-reminderCustomUnitHours=hours
-reminderCustomUnitDay=day
-reminderCustomUnitDays=days
-reminderCustomRelationBefore=before
-reminderCustomRelationAfter=after
-reminderCustomOriginBeginEvent=the event starts
-reminderCustomOriginEndEvent=the event ends
-reminderCustomOriginBeginTask=the task starts
-reminderCustomOriginEndTask=the task ends
-reminderErrorMaxCountReachedEvent=The selected calendar has a limitation of %1$S reminders per event.
-reminderErrorMaxCountReachedTask=The selected calendar has a limitation of %1$S reminders per task.
-newEvent=New Event
-newTask=New Task
+# LOCALIZATION NOTE (monthlyEveryDayOfNth):
+# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# #2 - month interval
+# e.g. "every day of the month every 4 months"
+monthlyEveryDayOfNth=every day of every month;every day of the month every #2 months
 
-emailSubjectReply=Re: %1$S
+# LOCALIZATION NOTE (repeatOrdinal...Nounclass...):
+# Ordinal numbers nouns for every noun class (grammatical genders) of weekdays
+# considered in 'repeatDetailsDayxNounclass' strings. For languages that need
+# localization according to genders or noun classes.
+# Nounclass1 <-> Masculine gender; Nounclass2 <-> Feminine gender.
+# Add 'repeatOrdinal...Nounclass' strings with suffix 3, 4 and so on for
+# languages with more than two noun classes for weekdays. In this case 
+# must be added corresponding rule strings with 'Nounclass...' suffix and 
+# corresponding values "nounclass..." must be written in
+# 'repeatDetailsDayxNounclass' strings.
+repeatOrdinal1Nounclass1=no primeiro
+repeatOrdinal2Nounclass1=no segundo
+repeatOrdinal3Nounclass1=no terceiro
+repeatOrdinal4Nounclass1=no quarto
+repeatOrdinal5Nounclass1=no quinto
+repeatOrdinal-1Nounclass1=no último
+repeatOrdinal1Nounclass2=na primeira
+repeatOrdinal2Nounclass2=na segunda
+repeatOrdinal3Nounclass2=na terceira
+repeatOrdinal4Nounclass2=na quarta
+repeatOrdinal5Nounclass2=na quinta
+repeatOrdinal-1Nounclass2=na última
+
+# LOCALIZATION NOTE (yearlyNthOn):
+# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
+# %1$S - month
+# %2$S - day of month
+# #3 - yearly interval
+# e.g. "every 3 years on December 14"
+yearlyNthOn=a cada %1$S %2$S;a cada #3 anos em %1$S %2$S
+
+# LOCALIZATION NOTE (yearlyNthOnNthOfNounclass...):
+# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
+# Translate these strings according to noun class/gender of weekday (%2$S) 
+# set in 'repeadDetailsDay...Nounclass' strings.
+# Nounclass1 <-> Masculine gender; Nounclass2 <-> Feminine gender.
+# Add others strings with suffix 3, 4,... for others noun classes if your
+# language need them. In this case, corresponding strings must be added for
+# others rule strings with 'Nounclass...' suffix and corresponding values 
+# "nounclass..." must be written in 'repeatDetailsDayxNounclass' strings.
+# %1$S - ordinal with article and noun class/gender corresponding to weekday
+# %2$S - weekday
+# %3$S - month
+# #4 - yearly interval
+# e.g. "the second Monday of every March"
+# e.g  "every 3 years the second Monday of March"
+yearlyNthOnNthOfNounclass1=%1$S %2$S de cada %3$S;cada #4 anos no %1$S %2$S of %3$S
+yearlyNthOnNthOfNounclass2=%1$S %2$S de cada %3$S;cada #4 anos na %1$S %2$S of %3$S
+
+# LOCALIZATION NOTE (yearlyOnEveryNthOfNthNounclass1):
+# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
+# Translate these strings according to noun class/gender of weekday (%1$S) 
+# set in 'repeadDetailsDay...Nounclass' strings.
+# Nounclass1 <-> Masculine gender; Nounclass2 <-> Feminine gender.
+# Add others strings with suffix 3, 4,... for others noun classes if your
+# language need them. In this case, corresponding strings must be added for
+# others rule strings with 'Nounclass...' suffix and corresponding values 
+# "nounclass..." must be written in 'repeatDetailsDayxNounclass' strings.
+# %1$S - weekday
+# %2$S - month
+# #3 - yearly interval
+# e.g. "every Thursday of March"
+# e.g  "every 3 years on every Thursday of March"
+yearlyOnEveryNthOfNthNounclass1=todo %1$S de %2$S;a cada #3 anos todo %1$S de %2$S
+yearlyOnEveryNthOfNthNounclass2=toda %1$S de %2$S;a cada #3 anos toda %1$S of %2$S
+
+repeatDetailsMonth1=Janeiro
+repeatDetailsMonth2=Fevereiro
+repeatDetailsMonth3=Março
+repeatDetailsMonth4=Abril
+repeatDetailsMonth5=Maio
+repeatDetailsMonth6=Junho
+repeatDetailsMonth7=Julho
+repeatDetailsMonth8=Agosto
+repeatDetailsMonth9=Setembro
+repeatDetailsMonth10=Outubro
+repeatDetailsMonth11=Novembro
+repeatDetailsMonth12=Dezembro
+
+# LOCALIZATION NOTE (repeatCount):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - A rule string (see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# %3$S - event start time (e.g. hh:mm (PM/AM))
+# %4$S - event end time (e.g. hh:mm (PM/AM))
+# #5 - event occurence times: number
+# e.g. with monthlyNthOfEvery:
+# "Occurs the first Sunday of every 3 month
+#  only on 1/1/2009"
+#  from 5:00 PM to 6:00 PM"
+# "Occurs the first Sunday of every 3 month
+#  effective 1/1/2009 for 5 times
+#  from 5:00 PM to 6:00 PM"
+repeatCount=Ocorre %1$S\na partir de %2$S #5 vez\nde %3$S a %4$S.;Ocorre %1$S\na partir de %2$S de #5 vezes\nde %3$S a %4$S.
+
+# LOCALIZATION NOTE (repeatCountAllDay):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - A rule string (see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# #3 - event occurence times: number
+# e.g. with monthlyNthOfEvery:
+# "Occurs the first Sunday of every 3 month
+#  only on 1/1/2009"
+# "Occurs the first Sunday of every 3 month
+#  effective 1/1/2009 for 5 times"
+repeatCountAllDay=Ocorre %1$S\na partir de %2$S por #3 vez.;Ocorre %1$S\na partir de %2$S por #3 vezes.
+
+# LOCALIZATION NOTE (repeatDetailsUntil):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - A rule string (see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# %3$S - event end date (e.g. mm/gg/yyyy)
+# %4$S - event start time (e.g. hh:mm (PM/AM))
+# %5$S - event end time (e.g. hh:mm (PM/AM))
+# e.g. with weeklyNthOn:
+# "Occurs every 2 weeks on Sunday and Friday
+#  effective 1/1/2009 until 1/1/2010 
+#  from 5:00 PM to 6:00 PM"
+repeatDetailsUntil=Ocorre %1$S\na partir de %2$S até %3$S\nde %4$S a %5$S.
+
+# LOCALIZATION NOTE (repeatDetailsUntilAllDay):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - A rule string (see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# %3$S - event end date (e.g. mm/gg/yyyy)
+# e.g. with monthlyDayOfNth and all day event:
+# "Occurs day 3 of every 5 month
+#  effective 1/1/2009 until 1/1/2010"
+repeatDetailsUntilAllDay=Ocorre %1$S\na partir de %2$S até %3$S.
+
+# LOCALIZATION NOTE (repeatDetailsInfinite):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - A rule string (see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# %3$S - event start time (e.g. hh:mm (PM/AM))
+# %4$S - event end time (e.g. hh:mm (PM/AM))
+# e.g. with monthlyDayOfNth:
+# "Occurs day 3 of every 5 month
+#  effective 1/1/2009
+#  from 5:00 PM to 6:00 PM"
+repeatDetailsInfinite=Ocorre %1$S\na partir de %2$S\nde %3$S a %4$S.
+
+# LOCALIZATION NOTE (repeatDetailsInfiniteAllDay):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - A rule string (see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# e.g. with monthlyDayOfNth and all day event:
+# "Occurs day 3 of every 5 month
+#  effective 1/1/2009"
+repeatDetailsInfiniteAllDay=Ocorre %1$S\na partir de %2$S.
+
+# LOCALIZATION NOTE (ruleTooComplex):
+# This string is shown in the reminder details area if our code can't handle the
+# complexity of the recurrence rule yet.
+ruleTooComplex=Clique aqui para ver detalhes
+
+newEvent=Novo evento
+newTask=Nova tarefa
+
+emailSubjectReply=Res: %1$S
 
 # Link Location Dialog
-specifyLinkLocation=Please specify the link location
-enterLinkLocation=Enter a web page, or document location.
+specifyLinkLocation=Favor especificar local do atalho
+enterLinkLocation=Digite uma página da internet, ou local de documento.
 
 summaryDueTaskLabel=Due:
 
 # Attach File Dialog
-selectAFile=Please select the file(s) to attach
-removeCalendarsTitle=Remove Attachments
-removeCalendarsText=Do you really want to remove %1$S attachments?
+selectAFile=Favor selecionar arquivo(s) para anexar
+removeCalendarsTitle=Exlcuir anexos
+removeCalendarsText=Você quer realmente excuir %1$S anexos?
 
 # Recurrence Dialog Widget Order
 # LOCALIZATION NOTE: You can change the order of below params
-# Edit recurrence window -> Recurrence pattern -> Repeat montly
-# %1$S - ordinal, %2$S - weekday
-# e.g. "First Saturday"
+# Edit recurrence window -> Recurrence pattern -> Repeat monthly
+# %1$S - ordinal with article, %2$S - weekday
+# e.g. "the First Saturday"
 monthlyOrder=%1$S %2$S
 
 # Edit recurrence window -> Recurrence pattern -> Repeat yearly
 # %1$S - day of month, %2$S - of, %3$S - month
 # e.g. "6 [of] September"
 # If you don't need %2$S in your locale - please put this on the third place.
-yearlyOrder=%1$S %3$S %2$S
+yearlyOrder=%1$S %2$S %3$S
 
 # Edit recurrence window -> Recurrence pattern -> Repeat yearly
-# %1$S - ordinal, %2$S - weekday, %3$S  - of, %4$S - month
-# e.g. "First Saturday of September"
+# %1$S - ordinal with article, %2$S - weekday, %3$S  - of, %4$S - month
+# e.g. "the First Saturday of September"
 # If you don't need %3$S in your locale - please put this on the third place.
 yearlyOrder2=%1$S %2$S %3$S %4$S
