--- a/pt-BR/calendar/chrome/lightning/lightning.properties
+++ b/pt-BR/calendar/chrome/lightning/lightning.properties
@@ -40,14 +40,14 @@
 
 # addon description:
 extensions.{e2fda1a4-762b-4020-b5ad-a41df1933103}.name=Lightning
-extensions.{e2fda1a4-762b-4020-b5ad-a41df1933103}.description=An integrated calendar for Thunderbird
-extensions.{e2fda1a4-762b-4020-b5ad-a41df1933103}.creator=Mozilla Calendar Project
+extensions.{e2fda1a4-762b-4020-b5ad-a41df1933103}.description=Um calendário integrado para o Thunderbird
+extensions.{e2fda1a4-762b-4020-b5ad-a41df1933103}.creator=Projeto Mozilla Calendar
 
 # Lightning branding
 brandShortName=Lightning
 
 # Task mode title
-taskModeApplicationTitle=Tasks
+taskModeApplicationTitle=Tarefas
 
 # Html event display in message
 imipHtml.header=Convite para evento
@@ -63,23 +63,23 @@ imipAddedItemToCal=Evento adicionado a calendário
 imipCanceledItem=Evento excluído
 imipUpdatedItem=Evento atualizado
 imipBarCancelText=Esta mensagem contém um cancelamento de evento.
-imipBarRefreshText=This message asks for an event update.
-imipBarPublishText=This message contains an event.
+imipBarRefreshText=Esta mensagem solicita uma atualização de evento.
+imipBarPublishText=Esta mensagem contém um evento.
 imipBarRequestText=Esta mensagem contém um convite para um evento.
 imipBarUpdateText=Esta mensagem contém uma atualização para um evento existente.
-imipBarAlreadyProcessedText=This message contains an event that has already been processed.
+imipBarAlreadyProcessedText=Esta mensagem contém um evento já processado.
 imipBarReplyText=Esta mensagem contém uma resposta a um convite.
 imipBarUnsupportedText=Esta mensagem contém um evento que esta versão do Lightning não consegue processar.
-imipBarProcessingFailed=Processing message failed. Status: %1$S.
+imipBarProcessingFailed=Falha a processar a mensagem. Posição: %1$S.
 imipAcceptInvitation.label=Aceitar
 imipCancelInvitation.label=Cancelar
 imipDeclineInvitation.label=Recusar
-imipUpdate.label=Update
-imipAcceptTentativeInvitation.label=Tentative
-imipSend.label=Send
-imipSendMail.title=E-Mail Notification
-imipSendMail.text=Would you like to send out notification E-Mail now?
-imipSendMail.Outlook2000CompatMode.text=Support Outlook 2000 and Outlook 2002/XP
+imipUpdate.label=Atualizar
+imipAcceptTentativeInvitation.label=Tentativa
+imipSend.label=Enviar
+imipSendMail.title=Notificação por e-mail
+imipSendMail.text=Gostaria de enviar mensagem de notificação agora?
+imipSendMail.Outlook2000CompatMode.text=Compatível com Outlook 2000 e Outlook 2002/XP
 imipNoIdentity=Nenhuma
 
 itipReplySubject=Resposta a convite para evento: %1$S
@@ -90,4 +90,4 @@ itipRequestBody=%1$S convidou você para %2$S
 itipCancelSubject=Evento cancelado: %1$S
 itipCancelBody=%1$S cancelou este evento: « %2$S »
 
-invitationsLink.label=Invitations: %1$S
+invitationsLink.label=Convites: %1$S
