--- a/pt-BR/calendar/updater/updater.ini
+++ b/pt-BR/calendar/updater/updater.ini
@@ -1,4 +1,4 @@
 ; This file is in the UTF-8 encoding
 [Strings]
-Title=Atualização de programa
-Info=O Sunbird está instalando atualizações e abrirá em instantes...
+TitleText=Atualização do %MOZ_APP_DISPLAYNAME%
+InfoText=O %MOZ_APP_DISPLAYNAME% está instalando a atualização e iniciará em instantes…
