syncing with 1.9.1 branch

--- a/cs/mail/chrome/messenger/addressbook/replicationProgress.properties
+++ b/cs/mail/chrome/messenger/addressbook/replicationProgress.properties
@@ -39,7 +39,7 @@ replicationStarted=Spuštěna replikace…
 changesStarted=Vyhledávání změn pro replikaci…
 replicationSucceeded=Replikace úspěšně ukončena.
 replicationFailed=Replikace selhala
-replicationCancelled=Replication cancelled
+replicationCancelled=Replikace zrušena
 # LOCALIZATION NOTE
 # do not localize %S.  %S is the current entry number (an integer)
 currentCount=Replikování záznamu v adresáři: %S
