--- a/cs/mail/chrome/messenger/imapMsgs.properties
+++ b/cs/mail/chrome/messenger/imapMsgs.properties
@@ -180,7 +180,7 @@ imapLoginFailedEnterNewPasswordButton=&Vložit nové heslo
 ## @loc None
 # LOCALIZATION NOTE (Error 5040): Do not translate the word "%S" below.
 # Place the word %S in your translation where the name of the folder should appear.
-5040=Přesunování zpráy do složky %S…
+5040=Přesunování zpráv do složky %S…
 
 ## @name IMAP_MOVING_MESSAGE_TO
 ## @loc None
