--- a/cs/mail/chrome/messenger/localMsgs.properties
+++ b/cs/mail/chrome/messenger/localMsgs.properties
@@ -240,7 +240,7 @@
 # secure authentication failed and unsure why
 ## @name CANNOT_PROCESS_APOP_AUTH
 ## @loc None
-4042=Poštovní server nepodporuje zabezpečenou autentizaci nebo jste zadali nesprávné heslo. Please check your password, or turn off secure authentication in the Server Settings for your mail server in the Account Settings window.\n
+4042=Poštovní server nepodporuje zabezpečenou autentizaci nebo jste zadali nesprávné heslo. Zkontrolujte si prosím své heslo nebo v dialogu nastavení účtu v sekci nastavení serveru zrušte zabezpečenou autentizaci.\n
 
 ## @name NS_ERROR_COULD_NOT_CONNECT_VIA_TLS
 ## @loc None
