--- a/pl/browser/chrome/browser/browser.properties
+++ b/pl/browser/chrome/browser/browser.properties
@@ -206,6 +206,12 @@ privateBrowsingYesTitle=&Przejdź do trybu prywatnego
 privateBrowsingNoTitle=&Anuluj
 privateBrowsingNeverAsk=&Nie wyświetlaj ponownie tego komunikatu
 
+# Ctrl-Tab
+# LOCALIZATION NOTE (ctrlTab.showAll.label): #1 represents the number
+# of tabs in the current browser window. It will always be 2 at least.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+ctrlTab.showAll.label=;Wyświetl wszystkie #1 karty;Wyświetl wszystkie #1 kart
+
 # LOCALIZATION NOTE (addKeywordTitleAutoFill): %S will be replaced by the page's title
 # Used as the bookmark name when saving a keyword for a search field.
 addKeywordTitleAutoFill=Szukaj na stronie %S
