--- a/pl/dom/chrome/security/caps.properties
+++ b/pl/dom/chrome/security/caps.properties
@@ -25,7 +25,7 @@ Yes=Zezwól
 No=Zabroń
 Titleline=Zabezpieczenia internetowe
 CheckMessage=Zapamiętaj tę decyzję
-EnableCapabilityQuery=Skrypt z "%S" zażądał rozszerzonych i niebezpiecznych dla komputera użytkownika i danych uprawnień:\n\n%S\n\nUdziel żądanych uprawnień tylko w przypadku, gdy jesteś pewien, że to źródło jest wolne od wirusów i innych niebezpieczeństw.
+EnableCapabilityQuery=Skrypt z "%S" zażądał rozszerzonych i niebezpiecznych dla komputera użytkownika i danych uprawnień:\n\n%S\n\nUdziel żądanych uprawnień tylko w przypadku, gdy masz pewność, że to źródło jest wolne od wirusów i innych niebezpieczeństw.
 
 # LOCALIZATION NOTE: Due to bug 315288, use only Western European characters in:
 # EnableCapabilityDenied, GetPropertyDenied, SetPropertyDenied, CallMethodDenied
@@ -34,9 +34,108 @@ EnableCapabilityQuery=Skrypt z "%S" zażądał rozszerzonych i niebezpiecznych d
 EnableCapabilityDenied=Skrypt z "%S" nie otrzymal uprawnien %S.
 CheckLoadURIError=Błąd naruszenia bezpieczeństwa: Treść zawarta pod adresem %S nie może zostać wczytana lub powiązana z %S.
 CheckSameOriginError=Błąd naruszenia bezpieczeństwa: Treść zawarta pod adresem %S nie może wczytać danych z %S.
-GetPropertyDeniedOrigins = Witrynie <%S> nie udzielono uprawnien do odczytania wlasciwosci %S.%S na <%S>.
-SetPropertyDeniedOrigins = Witrynie <%S> nie udzielono uprawnien do ustawienia wlasciwosci %S.%S na <%S>.
-CallMethodDeniedOrigins = Witrynie <%S> nie udzielono uprawnien do wywolania metody %S.%S na <%S>.
+
+# LOCALIZATION NOTE (GetPropertyDeniedOrigins):
+# %1$S is the origin of the script which was denied access.
+# %2$S is the origin of the object access was denied to.
+# %3$S is the type of object it was.
+# %4$S is the property of that object that access was denied for.
+GetPropertyDeniedOrigins = Witrynie <%1$S> nie udzielono uprawnien do odczytania wlasciwosci %2$S.%3$S z <%4$S>
+# LOCALIZATION NOTE (GetPropertyDeniedOriginsSubjectDomain):
+# %1$S is the origin of the script which was denied access.
+# %2$S is the origin of the object access was denied to.
+# %3$S is the type of object it was.
+# %4$S is the property of that object that access was denied for.
+# %5$S is the value of document.domain for the script which was denied access;
+#      don't translate "document.domain".
+GetPropertyDeniedOriginsSubjectDomain = Witrynie <%1$S> (document.domain=<%5$S>) nie udzielono uprawnien do odczytania wlasciwosci %2$S.%3$S z <%4$S> (document.domain nie zostala ustawiona).
+# LOCALIZATION NOTE (GetPropertyDeniedOriginsObjectDomain):
+# %1$S is the origin of the script which was denied access.
+# %2$S is the origin of the object access was denied to.
+# %3$S is the type of object it was.
+# %4$S is the property of that object that access was denied for.
+# %5$S is the value of document.domain for the object being accessed;
+#      don't translate "document.domain".
+GetPropertyDeniedOriginsObjectDomain = Witrynie <%1$S> (document.domain nie zostala ustawiona) nie udzielono uprawnien do odczytania wlasciwosci %2$S.%3$S z <%4$S> (document.domain=<%5$S>).
+# LOCALIZATION NOTE (GetPropertyDeniedOriginsSubjectDomainObjectDomain):
+# %1$S is the origin of the script which was denied access.
+# %2$S is the origin of the object access was denied to.
+# %3$S is the type of object it was.
+# %4$S is the property of that object that access was denied for.
+# %5$S is the value of document.domain for the script which was denied access;
+#      don't translate "document.domain"
+# %6$S is the value of document.domain for the object being accessed;
+#      don't translate "document.domain".
+GetPropertyDeniedOriginsSubjectDomainObjectDomain = Witrynie <%1$S> (document.domain=<%5$S>) nie udzielono uprawnien do odczytania wlasciwosci %2$S.%3$S z <%4$S> (document.domain=<%6$S>).
+
+# LOCALIZATION NOTE (SetPropertyDeniedOrigins):
+# %1$S is the origin of the script which was denied access.
+# %2$S is the origin of the object access was denied to.
+# %3$S is the type of object it was.
+# %4$S is the property of that object that access was denied for.
+SetPropertyDeniedOrigins = Witrynie <%1$S> nie udzielono uprawnien do ustawienia wlasciwosci %2$S.%3$S na <%4$S>.
+
+# LOCALIZATION NOTE (SetPropertyDeniedOriginsSubjectDomain):
+# %1$S is the origin of the script which was denied access.
+# %2$S is the origin of the object access was denied to.
+# %3$S is the type of object it was.
+# %4$S is the property of that object that access was denied for.
+# %5$S is the value of document.domain for the script which was denied access;
+#      don't translate "document.domain".
+SetPropertyDeniedOriginsSubjectDomain = Witrynie <%1$S> (document.domain=<%5$S>) nie udzielono uprawnien do ustawienia wlasciwosci %2$S.%3$S na <%4$S> (document.domain nie zostala ustawiona).
+# LOCALIZATION NOTE (SetPropertyDeniedOriginsObjectDomain):
+# %1$S is the origin of the script which was denied access.
+# %2$S is the origin of the object access was denied to.
+# %3$S is the type of object it was.
+# %4$S is the property of that object that access was denied for.
+# %5$S is the value of document.domain for the object being accessed;
+#      don't translate "document.domain".
+SetPropertyDeniedOriginsObjectDomain = Witrynie <%1$S> (document.domain nie zostala ustawiona) nie udzielono uprawnien do ustawienia wlasciwosci %2$S.%3$S na <%4$S> (document.domain=<%5$S>).
+# LOCALIZATION NOTE (SetPropertyDeniedOriginsSubjectDomainObjectDomain):
+# %1$S is the origin of the script which was denied access.
+# %2$S is the origin of the object access was denied to.
+# %3$S is the type of object it was.
+# %4$S is the property of that object that access was denied for.
+# %5$S is the value of document.domain for the script which was denied access;
+#      don't translate "document.domain"
+# %6$S is the value of document.domain for the object being accessed;
+#      don't translate "document.domain".
+SetPropertyDeniedOriginsSubjectDomainObjectDomain = Witrynie <%1$S> (document.domain=<%5$S>) nie udzielono uprawnien do ustawienia wlasciwosci %2$S.%3$S na <%4$S> (document.domain=<%6$S>).
+
+# LOCALIZATION NOTE (CallMethodDeniedOrigins):
+# %1$S is the origin of the script which was denied access.
+# %2$S is the origin of the object access was denied to.
+# %3$S is the type of object it was.
+# %4$S is the method of that object that access was denied for.
+CallMethodDeniedOrigins = Witrynie <%1$S> nie udzielono uprawnien do wywolania metody %2$S.%3$S na <%4$S>.
+
+# LOCALIZATION NOTE (CallMethodDeniedOriginsSubjectDomain):
+# %1$S is the origin of the script which was denied access.
+# %2$S is the origin of the object access was denied to.
+# %3$S is the type of object it was.
+# %4$S is the method of that object that access was denied for.
+# %5$S is the value of document.domain for the script which was denied access;
+#      don't translate "document.domain".
+CallMethodDeniedOriginsSubjectDomain = Witrynie <%1$S> (document.domain=<%5$S>) nie udzielono uprawnien do wywolania metody %2$S.%3$S na <%4$S> (document.domain nie zostala ustawiona).
+# LOCALIZATION NOTE (CallMethodDeniedOriginsObjectDomain):
+# %1$S is the origin of the script which was denied access.
+# %2$S is the origin of the object access was denied to.
+# %3$S is the type of object it was.
+# %4$S is the method of that object that access was denied for.
+# %5$S is the value of document.domain for the object being accessed;
+#      don't translate "document.domain".
+CallMethodDeniedOriginsObjectDomain = Witrynie <%1$S> (document.domain nie zostala ustawiona) nie udzielono uprawnien do wywolania metody %2$S.%3$S na <%4$S> (document.domain=<%5$S>).
+# LOCALIZATION NOTE (CallMethodDeniedOriginsSubjectDomainObjectDomain):
+# %1$S is the origin of the script which was denied access.
+# %2$S is the origin of the object access was denied to.
+# %3$S is the type of object it was.
+# %4$S is the method of that object that access was denied for.
+# %5$S is the value of document.domain for the script which was denied access;
+#      don't translate "document.domain"
+# %6$S is the value of document.domain for the object being accessed;
+#      don't translate "document.domain".
+CallMethodDeniedOriginsSubjectDomainObjectDomain = Witrynie <%1$S> (document.domain=<%5$S>) nie udzielono uprawnien do wywolania metody %2$S.%3$S na <%4$S> (document.domain=<%6$S>).
+
 GetPropertyDeniedOriginsOnlySubject = Witrynie <%S> nie udzielono uprawnien do odczytania wlasciwosci %S.%S
 SetPropertyDeniedOriginsOnlySubject = Witrynie <%S> nie udzielono uprawnien do ustawienia wlasciwosci %S.%S
 CallMethodDeniedOriginsOnlySubject = Witrynie <%S> nie udzielono uprawnien do wywolania metody %S.%S
