--- a/fr/mail/chrome/messenger/localMsgs.properties
+++ b/fr/mail/chrome/messenger/localMsgs.properties
@@ -38,6 +38,18 @@
 # The following are used by the local mail code to display progress/status/error messages
 #
 
+pop3EnterPasswordPromptTitle=Saisissez votre mot de passe
+
+# LOCALIZATION NOTE(pop3EnterPasswordPrompt): Do not translate the words "%1$S"
+# and "%2$S" below. Place the word %1$S where the user name should appear, and
+# %2$S where the host name should appear.
+pop3EnterPasswordPrompt=Saisissez votre mot de passe pour %1$S sur %2$S :
+
+# LOCALIZATION NOTE(pop3PreviouslyEnteredPasswordIsInvalidPrompt): Do not
+# translate the words "%1$S" and "%2$S" below. Place the word %1$S where the
+# user name should appear, and %2$S where the host name should appear.
+pop3PreviouslyEnteredPasswordIsInvalidPrompt=Veuillez saisir un nouveau mot de passe pour l'utilisateur %1$S sur %2$S :
+
 ## @name MK_POP3_OUT_OF_DISK_SPACE
 ## @loc None
 -321=Il n'y a plus assez d'espace disque pour télécharger les nouveaux messages. Essayez de supprimer de vieux messages, de vider la corbeille ou de compacter les dossiers de courrier et essayez à nouveau.
@@ -47,7 +59,7 @@
 ## @loc None
 #LOCALIZATION NOTE (4000): Do not translate %s in the following line.
 # Place the word %s where the name of the mailbox should appear
-4000=Construction d'un fichier sommaire pour %S…
+4000=Construction d'un fichier sommaire pour %s…
 
 # Status - parsing folder
 ## @name LOCAL_STATUS_DOCUMENT_DONE
@@ -130,22 +142,6 @@
 ## @loc None
 # LOCALIZATION NOTE(4016): Do not translate the word "POP3" below.
 4016=La commande DELE a échoué. Erreur lors du marquage d'un message pour suppression.
-
-## @name POP3_ENTER_PASSWORD_PROMPT
-## @loc None
-# LOCALIZATION NOTE(4016): Do not translate the word "%1$s@%2$s" below.
-# Place the word "%1$s" and "%2$s" where email account name should appear (i.e. john.smith@example.org)
-4017=Saisissez votre mot de passe pour %1$s sur %2$s:
-
-## @name POP3_PREVIOUSLY_ENTERED_PASSWORD_IS_INVALID_ETC
-## @loc None
-# LOCALIZATION NOTE(4016): Do not translate the word "%s" below. It will receive the message returned by the server.
-# Do not translate "%.100s" and "%.100s". It will receive the email account name.
-4018=Veuillez saisir un nouveau mot de passe pour l'utilisateur %.100s sur %.100s :
-
-## @name POP3_ENTER_PASSWORD_PROMPT_TITLE
-## @loc None
-4020=Saisissez votre mot de passe :
 
 # Status - stat failed
 ## @name POP3_STAT
