--- a/de/mail/chrome/messenger/messenger.properties
+++ b/de/mail/chrome/messenger/messenger.properties
@@ -507,3 +507,11 @@ glodaSearch_results_why_contact=Beteiligte
 glodaSearch_results_why_subject=Betreff
 glodaSearch_results_why_body=Inhalt
 glodaSearch_results_why_attachment=Anhänge
+
+mailServerLoginFailedTitle=Login fehlgeschlagen
+# LOCALIZATION NOTE (mailServerLoginFailedTitle): Insert "%S" in your
+# translation where you wish to display the hostname of the server to which
+# login failed.
+mailServerLoginFailed=Login auf dem Server %S fehlgeschlagen.
+mailServerLoginFailedRetryButton=&Nochmal versuchen
+mailServerLoginFailedEnterNewPasswordButton=Neues &Passwort eingeben
